mule-user-guide/v/3.4/installing.adoc
= Installing

== Mule Installation Procedure
. link:/docs/display/34X/Hardware+and+Software+Requirements[Check hardware and software requirements.]
. link:/docs/display/34X/Compatibility[Check system compatibility with platform software.]
. link:/docs/display/34X/Downloading+and+Launching+Mule+ESB[Download, then launch Mule.]
. link:/docs/display/34X/Adding+Community+Runtime[Add Community runtime to Mule Studio] (_optional_).
. link:/docs/display/34X/Installing+an+Enterprise+License[Install an Enterprise license] (_optional_).
. link:/docs/display/34X/Installing+Extensions[Extend Mule with plugins, modules, runtimes and connectors] (_optional_).

[width="100%",cols="34%,33%,33%",]
|===
|http://www.mulesoft.com/mule-studio[image:/docs/download/attachments/95393306/studio.png?version=1&modificationDate=1374598344848[image]] |http://www.mulesoft.com/mule-esb-open-source-esb[image:/docs/download/attachments/95393306/enterprise.png?version=1&modificationDate=1374598344666[image]] |http://www.mulesoft.org/download-mule-esb-community-edition[image:/docs/download/attachments/95393306/community.png?version=1&modificationDate=1374598344492[image]]
|===

== Which version of Mule am I using?

Already have Mule installed? The following procedures outline the steps to take in both *Mule Studio* and *Mule Standalone* to determine the version number of your Mule runtime.

[tabs]
------
[tab,title="Studio"]
....

This procedure assumes that you have already launched Mule Studio and have opened a new or existing project. If you have not yet opened your first project in Studio, click *File* > *New* > *Mule Project*, and observe the default value in the *Server Runtime* field in the wizard.

. In the *Package Explorer*, click the expand arrow next to the name of one of your projects to expand the folder.
+
image:/docs/download/thumbnails/95393306/expand_arrow.png?version=1&modificationDate=1374598345772[image]

. Double-click the `mule-project.xml` file to open it in a new tab in the canvas.

. Note the *Server Runtime* version in the *Runtime* column at right.
+
image:/docs/download/attachments/95393306/runtime.png?version=1&modificationDate=1374598345945[image]

[tab,title="Standalone"]

. Run Mule standalone from the command line.
////
[collapsed content]
 Need More Detail?
.. Open a new command line.  +
*PC*: Open the *Console*.  +
*Mac*: Open the *Terminal* application (Applications > Utilities > Terminal).
.. Access the directory and folder in which downloaded Mule. For example, type +
`cd /Users/aaron/Downloads/mule-standalone-3.3.1/`
.. Start Mule. For example, type +
`./bin/mule`
////

. After Mule starts, scroll up in the command line window to find the  `Mule ESB and Integration Platform`  where Mule displays the version.
+
image:/docs/download/attachments/95393306/standalone_version.png?version=1&modificationDate=1374598346107[image]

....
------
