mule-user-guide/v/3.5/installing.adoc
= Installing

== Mule Installation Procedure

. [Check hardware and software requirements].
. [Check system compatibility with platform software].
. [Download, then launch Mule]
. [Add Community runtime to Anypoint(TM) Studio] _(optional)_.
. [Install an Enterprise license] _(optional)_.
. [Extend Mule with plugins, modules, runtimes and connectors] _(optional)_.

== Which Version of Mule am I using?

Already have Mule installed? The following procedures outline the steps to take in both *Anypoint Studio* and *Mule Standalone* to determine the version number of your Mule runtime.

[tabs]
------
[tab,title="Studio"]
....
This process assumes that you have already launched Studio and have opened a new or existing project. IF you have not yet opened your first project in Studio, click *File > New > Mule Project*, and observe the default value in the *Server Runtime* field in the wizard.

. In the *Package Explorer*, click the expand arrow next to the name of one of your projects to expand the folder.
+
image:/docs/download/attachments/122750658/expand_arrow.png?version=1&modificationDate=1421449540481[image]

. Double click the `mule-project.xml` file to open in a new tab in the canvas.

. Note the *Server Runtime* version in the *Runtime* column at right.
+
image:/docs/download/attachments/122750658/runtime.png?version=1&modificationDate=1421449540650[image]
....
[tab,title="Standalone"]
....
. Run Mule standalone from the command line.
+
[collapsed content]
....
Need more Detail?

.. Open a new command line.
+
*Windows*: Open the *Console*.
+
*Mac*: Open the *Terminal* application (Applications > Utilities > Terminal).

.. Access the directory and folder in which downloaded Mule. For example, type `cd /User/aaron/Downloads/mule-standalone-3.3.1/`.

.. Start Mule. For example, tpe `.bin/mule`.
....

. After Mule starts, scroll up in the command line window to find the `Mule ESB and Integration Platform` where Mule displays the version.
+
image:/docs/download/attachments/122750658/standalone_version.png?version=1&modificationDate=1421449540788[image]
....
------

== Installing Newer or Older Runtimes

[tabs]
------
[tab,title="Community Users"]
....
Community users can obtain the latest version of Mule Community on the [Download page] on mulesoft.org.

The standard download provided at the top of the [Downloads page] includes the latest version of *Anypoint Studio* bundled with a 30-day trail of the Mule Enterprise runtime version 3.5.0. See [Adding Community Runtime] for instruction on how to add the Community runtime, or other Mule runtimes, into your instance of Studio. When you create new projects or import projects, Studio prompts you to select the runtime to which you want to deploy your project.

[TIP]
To download the latest *Mule Standalone runtime* _without_ Anypoint Studio, scroll down to the table on the Downloads page under the heading *Previous ESB Versions*.

To download a previous Standalone runtime version of Mule, scroll down further on the Downloads page to the section titled *Previous ESB Versions*.
....
[tab,title="Enterprise Customers"]
....
Enterprise customers can obtain all versions of all Mule products on the [MuleSoft Customer Portal].

After logging in, navigate to the *Downloads* tab where the most recent versions of Anypoint Studio, Mule Standalone, Mule Management Console, and the SAP transport are listed.

The latest version of *Anypoint Studio* includes runtime version 3.5.0. See [Installing Extensions] for instructions on how to add other Mule runtime versions into your Studio instance. When you create new projects or import projects into Studio, you can select the runtime on which you want to deploy your project.

To access previous version of any MuleSoft product, click the *Content* tab, then search for the product to see all of its versions and associated downloads.
....
-----
